five day forcast has been enabled

--- a/index.html
+++ b/index.html
@@ -39,29 +39,14 @@
 
         <div class="card col-9">
           <div class="card-body">
-            <div class="card">
-              <h1 id="w-location">City and Date</h1>
-              <h3 class="text-dark" id="w-desc"></h3>
-              <h3 id="w-string">Temperature</h3>
-              <p>Wind</p>
-              <p>Humidity</p>
-              <p>UV Index</p>
-              <img id="w-icon" />
-            </div>
+            <!-- The current day's weather goes here -->
+            <div class="card" id="current-weather"></div>
 
             <h2>5 Day Forecast</h2>
 
-            <div class="card col-9">
-              <div class="card">
-                <div class="card-body">
-                  <div class="card-title" id="w-location">City and Date</div>
-                  <h3 class="text-dark" id="w-desc"></h3>
-                  <h3 id="w-string">Temperature</h3>
-                  <p>Wind</p>
-                  <p>Humidity</p>
-                  <img id="w-icon" />
-                </div>
-              </div>
+            <div class="card col-9" id="five-day-weather">
+              <!-- five day forecast is inserted here -->
+              <p>hello</p>
             </div>
           </div>
         </div>
